--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*	@mikelodder7 @vaporos @lovesh @dcmiddle @dhuseby @brentzundel @dubovitskaya @hartm @manudrijvers @danintel @mac-arrap 
+*	@hyperledger/ursa-maintainers
