--- a/specs/docker/ubuntu/Dockerfile
+++ b/specs/docker/ubuntu/Dockerfile
@@ -8,4 +8,4 @@ ENV DEBCONF_NONINTERACTIVE_SEED=true
 RUN echo "tzdata tzdata/Areas select US" | debconf-set-selections \
     && echo "tzdata tzdata/Zones/US select Mountain" | debconf-set-selections \
     && apt update 2>&1 > /dev/null \
-    && apt install -qq -y texlive-latex-extra texlive-extra-utils texlive-science 2>&1 > /dev/null
+    && apt install -qq -y texlive-latex-extra texlive-extra-utils biber texlive-science 2>&1 > /dev/null
